# Game-of-Life

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: cell.hpp  color.hpp  constants.hpp  game.hpp  pair_hasher.hpp  renderer.hpp  return_code.hpp  screen_dimensions.hpp  sdl_wrappings.hpp  window.hpp
src/: RGB.cpp  RGB.hpp  game.cpp  main.cpp  renderer.cpp  renderer.hpp  sdl_wrappings.cpp  window.cpp
